<?xml version="1.0" encoding="utf-8"?>
<!--mauqetado-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfil"
    android:background="@color/grayrojo2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_informacion"
            android:textSize="25sp"
            android:textColor="@color/cafe2"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingBottom="8dp"
            android:contentDescription="@string/editar_informacion_desc"/>

        <EditText
            android:id="@+id/et_nombrecambiar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nuevo_nombre"
            android:textColor="@android:color/black"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/gray2"
            android:background="@drawable/third_rounder_button"
            android:contentDescription="@string/et_nombrecambiar_desc"/>

        <EditText
            android:id="@+id/et_nuevadescripcion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nueva_descripcion"
            android:layout_marginVertical="10dp"
            android:background="@drawable/third_rounder_button"
            android:textColor="@android:color/black"
            android:inputType="textMultiLine"
            android:autofillHints="description"
            android:textColorHint="@color/gray2"
            android:contentDescription="@string/et_nuevadescripcion_desc"/>


        <androidx.cardview.widget.CardView
            android:layout_marginVertical="10dp"
            android:layout_width="215dp"
            android:layout_height="215dp"
            android:backgroundTint="@color/black"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp">
        <androidx.cardview.widget.CardView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            >
        <ImageView
            android:id="@+id/iv_fotoperfil"
            android:layout_width="200dp"
            android:layout_height="200dp"
           android:layout_gravity="center"
            android:background="@drawable/subir_ico"
            android:contentDescription="@string/imagen_perfil_desc"/>
        </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
<View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    />
        <android.widget.Button
            android:id="@+id/btn_cambiardatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publicar"
            android:layout_margin="10dp"
            android:background="@drawable/third_rounder_button"
            android:padding="16dp"
            android:contentDescription="@string/btn_cambiardatos_desc"/>

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>