<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="331dp"
        android:layout_height="411dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918">

        <EditText
            android:id="@+id/Et_nameuser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/Et_correo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:text="@string/correo" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <EditText
            android:id="@+id/Et_contraseña"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:text="@string/contraseña" />


        <ImageView
            android:id="@+id/ivTogglePassword"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:contentDescription="@string/toggle_password_visibility"
            android:src="@drawable/ic_visibility_off" />
    </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCrearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/crear"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:text="@string/googlecuenta"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <ImageButton
                android:id="@+id/btn_googlecrear"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/google_login"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_google" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/yatienes"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGotoiniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/secod_rounded_button"
            android:text="@string/iniciar"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="438dp"
        android:layout_height="283dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_encabezado" />

</androidx.constraintlayout.widget.ConstraintLayout>